@@ -1518,55 +1518,6 @@ return|return
 literal|true
 return|;
 block|}
-comment|// Make sure that if the schema is managed, we don't allow editing. Don't really want to put
-comment|// this in the init since we're not entirely sure when the managed schema will get initialized relative to this
-comment|// handler.
-name|SolrCore
-name|core
-init|=
-name|req
-operator|.
-name|getCore
-argument_list|()
-decl_stmt|;
-name|IndexSchema
-name|schema
-init|=
-name|core
-operator|.
-name|getLatestSchema
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|schema
-operator|instanceof
-name|ManagedIndexSchema
-condition|)
-block|{
-name|String
-name|managed
-init|=
-name|schema
-operator|.
-name|getResourceName
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|fname
-operator|.
-name|equalsIgnoreCase
-argument_list|(
-name|managed
-argument_list|)
-condition|)
-block|{
-return|return
-literal|true
-return|;
-block|}
-block|}
 return|return
 literal|false
 return|;
